--- a/IAMultiAgent/IAAgents/IAAgents.csproj
+++ b/IAMultiAgent/IAAgents/IAAgents.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Feu.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vehicule.cs" />
