Ajout de la classe carrefour (environnement) Ajout méthode dans la classe vehicule

--- a/IAMultiAgent/IAAgents/IAAgents.csproj
+++ b/IAMultiAgent/IAAgents/IAAgents.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Carrefour.cs" />
+    <Compile Include="Enum.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vehicule.cs" />
