--- a/IAMultiAgent/IAAgents/IAAgents.csproj
+++ b/IAMultiAgent/IAAgents/IAAgents.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,12 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Camion.cs" />
     <Compile Include="Carrefour.cs" />
     <Compile Include="Enum.cs" />
     <Compile Include="Feu.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vehicule.cs" />
+    <Compile Include="VehiculeFactory.cs" />
+    <Compile Include="Voiture.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
