Correctif graphique Attention tout les cas de position init et de position ne sont pas gerer Il manque aussi une gestion de la vitesse et de la colision et des feux

--- a/IAMultiAgent/IAAgents/IAAgents.csproj
+++ b/IAMultiAgent/IAAgents/IAAgents.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,6 +47,7 @@
     <Compile Include="Feu.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Route.cs" />
     <Compile Include="Vehicule.cs" />
     <Compile Include="VehiculeFactory.cs" />
     <Compile Include="Voiture.cs" />
